feat: update entity state